--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Todo App</title>
   </head>
   <body>
@@ -15,30 +17,38 @@
               id="form-input"
               class="form"
               type="text"
-              value=""
               placeholder="Enter new Todo..."
+              required
               />
-              <span><input class="todo-btn" type="submit" value="Add Todo" /></span>
+              <button class="todo-button" type="submit"><span class="material-icons">send</span></button>
           </form>
-          <button class="clear-localstorage"> Clear All </button>
+          <button class="clear-localstorage"> Delete All <span class="material-icons"> auto_delete</span></button>
         </div>
-        <div class="todo-header"><h3>Todo Items...</h3></div>
+        <div class="todo-header">
+          <p>Todos...</p>
+          <div class="date-holder"></div>
+        </div>
         <div class="todo-items-wrapper">
           <ul class="todo-list">
-            <li class="todo-item">
-              Wash some clothesvhdjvhdiu jhfhbfiobhfiobfbkfhbfifb
-              vvnvhvfjvncjnvchvfmn fvkdvhdhdiughdj
-            </li>
-            <!-- <li class="todo-item">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Iure, nostrum. Eos voluptas maxime pariatur? Quam repellendus vel eos praesentium iusto!</li>
-            <li class="todo-item">Write resume</li>
-           <li class="todo-item">Check Email</li> -->
-            <li class="todo-item">Read the Docs</li>
-            <li class="todo-item">Wash some clothes</li>
+            <h1 class='todo-holder'>Your Todo List is Empty!</h1>
+            <i class="material-icons">face</i>
+            <span class="material-icons"> auto_delete </span>
+            <span class="material-icons"> send </span>
+            <span class="material-icons"> notification_important </span>
+            <span class="material-icons"> alert </span>
+            <img src="https://img.icons8.com/fluent/48/000000/appointment-reminders.png"/>
+            
           </ul>
         </div>
       </div>
     </section>
+    <div id="modal-box" class="modal-box">
+      <p class="modal-text"> Proceed to delete all todos?</p>
+      <div id="modal-buttons">
+        <button id="button-1" class="modal-button">Delete all</button>
+        <button class="modal-button" id="button-2"> Cancel</button>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
   </html>
