--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Todo App</title>
   </head>
   <body>
@@ -19,10 +21,14 @@
               type="text"
               placeholder="Enter new Todo..."
               required
-              />
-              <button class="todo-button" type="submit"><span class="material-icons">send</span></button>
+            />
+            <button class="todo-button" type="submit">
+              <span class="material-icons">send</span>
+            </button>
           </form>
-          <button class="clear-localstorage"> Delete All <span class="material-icons"> auto_delete</span></button>
+          <button class="clear-localstorage">
+            Delete All <span class="material-icons"> auto_delete</span>
+          </button>
         </div>
         <div class="todo-header">
           <p>Todos...</p>
@@ -30,23 +36,19 @@
         </div>
         <div class="todo-items-wrapper">
           <ul class="todo-list">
-            <h1 class='todo-holder'>Your Todo List is Empty!</h1>
-            <i class="material-icons">face</i>
-            <span class="material-icons"> auto_delete </span>
-            <span class="material-icons"> send </span>
-            <span class="material-icons"> notification_important </span>
-            <span class="material-icons"> alert </span>    
+            <h1 class="todo-holder">Your Todo List is Empty!</h1>
           </ul>
         </div>
       </div>
     </section>
     <div id="modal-box" class="modal-box">
-      <p class="modal-text"> Proceed to delete all todos?</p>
+      <span id="modal-icon" class="material-icons"> notifications_active </span>
+      <p class="modal-text">Proceed to delete all todos?</p>
       <div id="modal-buttons">
         <button id="button-1" class="modal-button">Delete all</button>
-        <button class="modal-button" id="button-2"> Cancel</button>
+        <button class="modal-button" id="button-2">Cancel</button>
       </div>
     </div>
     <script src="index.js"></script>
   </body>
-  </html>
+</html>
