--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Todo App</title>
+    <title>Todo</title>
   </head>
   <body>
     <section class="section-wrapper">
@@ -21,13 +21,13 @@
               type="text"
               placeholder="Enter new Todo..."
               required
-            />
+           />
             <button class="todo-button" type="submit">
               <span class="material-icons">send</span>
             </button>
           </form>
           <button class="clear-localstorage">
-            Delete All <span class="material-icons"> auto_delete</span>
+            Delete All <span class="material-icons">delete_forever</span>
           </button>
         </div>
         <div class="todo-header">
@@ -42,7 +42,7 @@
       </div>
     </section>
     <div id="modal-box" class="modal-box">
-      <span id="modal-icon" class="material-icons"> notifications_active </span>
+      <span id="modal-icon" class="material-icons"> circle_notifications </span>
       <p class="modal-text">Proceed to delete all todos?</p>
       <div id="modal-buttons">
         <button id="button-1" class="modal-button">Delete all</button>
